fix outDeck & handDeck Display Style + last-child of a deck always in screen + outDeck expand when hover + card in outDeck entirely shown when hover * other cards in a Deck share the rest space equally * decks will not wrap * change the cursor on outDeck
(computer chrome 53.0.2785 tested)

--- a/GUIstyle.css
+++ b/GUIstyle.css
@@ -8,7 +8,7 @@
 .deck {
 	display: flex;
 	flex-direction: row;
-	flex-wrap: wrap;
+	flex-wrap: no-wrap;
 	justify-content: center;
 	align-items: center;
 	width: 100%;
@@ -17,17 +17,18 @@
 }
 
 .card {
-	width: 10%;
-	min-width: 20px;
-	max-width: 100px;
+	width: auto;
+	min-width: 0px;
 	height: 80%;
 }
-
+.card:last-child {
+	min-width: auto;
+}
 .card img {
 	height: 100%;
 }
 .deck.top {
-	width: 20%;
+	width: auto;
 }
 .deck.poolDeck {
 	order: 50;
@@ -44,19 +45,22 @@
 	width: 50%;
 	order: 51;
 	background: turquoise;
-	cursor: grab;
-	cursor: -webkit-grab;
+	cursor: pointer;
+	margin-left: 10px;
 }
 .deck.outDeck .card {
 	min-width: 0px;
 	width: 0px;
 }
 .deck.outDeck:hover .card {
-	width: 1.6%;
-	max-width: 100px;
+	max-width: 2%;
+	width: auto;
+	min-width: 0px;
 }
-.deck.outDeck:hover .card:hover {
-	width: 10%;
+.deck.outDeck .card:last-child, .deck.outDeck:hover .card:hover {
+	min-width: auto;
+	width: auto;
+	max-width: 100%;
 }
 .view0 {
 	order: 99;
